Bug 410605 - "Ok" and "Apply" buttons should use the dialog-password icon
Summary: "Ok" and "Apply" buttons should use the dialog-password icon
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_plymouth (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 411955 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-05 13:28 UTC by Patrick Silva
Modified: 2019-09-19 08:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
SDDM kcm (11.20 KB, image/jpeg)
2019-08-05 13:28 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-08-05 13:28:01 UTC
Created attachment 121942 [details]
SDDM kcm

SUMMARY
Both "Ok" and "Apply" buttons of some KCMs have a different icon to indicate
that password is required to save changes. Attached screenshot shows SDDM kcm,
and Kwallet kcm has the same icons.
However, Plymouth KCM that also requires password to save changes has "normal"
icons for its "Ok" and "Apply" buttons.

STEPS TO REPRODUCE
1. open the apps launcher, search for "boot splash screen" kcm and open it
2. 
3. 


OBSERVED RESULT
"Ok" and "Apply" buttons have "normal" icon.

EXPECTED RESULT
Consistency. All KCMs that require password to save changes should have dialog-password icon for their "Ok" and "Apply" buttons.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.61.0
Qt Version: 5.12.3
Comment 1 Kai Uwe Broulik 2019-08-05 13:56:16 UTC
Git commit dc868b4ee1b3369a6f4e92757403185cd716d9ea by Kai Uwe Broulik.
Committed on 05/08/2019 at 13:55.
Pushed by broulik into branch 'master'.

Set needsAuthorization

Was commented for some reason.
FIXED-IN: 5.17.0

Differential Revision: https://phabricator.kde.org/D22947

M  +3    -5    src/kcm.cpp

https://commits.kde.org/plymouth-kcm/dc868b4ee1b3369a6f4e92757403185cd716d9ea
Comment 2 Kai Uwe Broulik 2019-09-19 08:32:24 UTC
*** Bug 411955 has been marked as a duplicate of this bug. ***