Set needsAuthorization

Was commented for some reason.

BUG: 410605
FIXED-IN: 5.17.0

Differential Revision: https://phabricator.kde.org/D22947